--- a/AI Lab Practicals/Assignment 4/AI_Assignment_4.ipynb
+++ b/AI Lab Practicals/Assignment 4/AI_Assignment_4.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h2>Name: Pratham Agrawal</h2>\n",
-        "<h2>PRN: 22070521078</h2>"
+        "<h2>Name: Kaivalya Sawant</h2>\n",
+        "<h2>PRN: 22070521195</h2>"
       ],
       "metadata": {
         "id": "LkeGDXu5G3Y-"
