--- a/AI Lab Practicals/Assignment 5/AI_Assignment_5.ipynb
+++ b/AI Lab Practicals/Assignment 5/AI_Assignment_5.ipynb
@@ -7,8 +7,8 @@
         "id": "LkeGDXu5G3Y-"
       },
       "source": [
-        "<h2>Name: Atharva Kale</h2>\n",
-        "<h2>PRN: 22070521071</h2>"
+        "<h2>Name: Kaivalya sawant</h2>\n",
+        "<h2>PRN: 22070521195</h2>"
       ]
     },
     {
